--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+.box{
+  height: 100px;
+  width: 200px;
+  border: 2px solid black;
+  background-color: #61dafb;
+  margin-left: 50px;
+}
